--- a/eicw/eicw copy.html
+++ b/eicw/eicw copy.html
@@ -74,7 +74,7 @@
     </header>
 
     <section class="wbnrfz-summ breadcrumb-area-eicw-cover bg-img parallax" id="cv-img"
-        style="background-image: url(img/cover-light.png); height: 100vh;">
+        style="background-image: url(img/cover-light.png); height: 85vh;">
         <div class="wbnrfz_details_blog">
             <div class="container">
                 <div class="portfolio-controls d-flex justify-content-between align-items-center">
@@ -111,18 +111,49 @@
     </section>
 
 
-
-
-
-
-
-
-    
     <!-- Section Content -->
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
 
+            <div class="scrollable-tabs-container">
+                <div class="left-arrow">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="M15.75 19.5 8.25 12l7.5-7.5" />
+                    </svg>
 
+                </div>
+
+                <ul>
+                    <li>
+                        <a href="eicw.html" class="active">Design System Introduction</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-2.html">Proposed Wayfinding Changes - Trains</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-3.html">Proposed Wayfinding Changes - Buses</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-4.html">Proposed UI/UX Changes</a>
+                    </li>
+
+                    <li>
+                        <a href="eicw-5.html">Rethinking CCL6 Signages</a>
+                    </li>
+                </ul>
+
+                <div class="right-arrow active">
+                    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5"
+                        stroke="currentColor" class="size-6">
+                        <path stroke-linecap="round" stroke-linejoin="round" d="m8.25 4.5 7.5 7.5-7.5 7.5" />
+                    </svg>
+
+                </div>
+            </div>
 
             <div class="container container-mobile">
                 <div class="row justify-content-center">
