--- a/eicw/eicw-5.html
+++ b/eicw/eicw-5.html
@@ -240,9 +240,35 @@
 
   </section>
 
+  <!-- Enhancements Overview -->
+  <section class="about-me-summ clearfix" style="padding-bottom: 7px; padding-top: 7px;">
+    <div class="wbnrfz_details_body_tchp">
+      <div class="container container-xxl">
+        <div class="row justify-content-center">
+          <div class="col-lg-12">
+            <div class="row justify-content-center">
+
+              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
+                <h2 class="mb-3 text-center"
+                  style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 7px;">
+                  Enhancements Overview</h2>
+                <div class="banner-eicw">
+                  <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img">
+                    <img src="img/ccl6-overview-light.png" id="evo3-img" class="img-fluid" alt="evo3">
+                  </a>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+    </div>
+  </section>
+
   <!-- Background -->
   <section class="about-me-summ clearfix" style="padding-bottom: 30px;">
-    <div class="wbnrfz_eicw">
+    <div class="wbnrfz_details_body">
       <div class="container container-mobile">
         <div class="row justify-content-center">
           <div class="col-lg-12">
@@ -308,7 +334,6 @@
       </div>
     </div>
   </section>
-
 
   <!----- Section 1 Header ----->
   <section class="breadcrumb-area-eicw-subs bg-img bg-overlay-section" id="ent-img"
@@ -930,32 +955,6 @@
                   </figcaption>
                 </div>
                 <hr>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-    </div>
-  </section>
-
-  <!-- Enhancements Overview -->
-  <section class="about-me-summ clearfix" style="padding-bottom: 7px; padding-top: 7px;">
-    <div class="wbnrfz_details_body_tchp">
-      <div class="container container-xxl">
-        <div class="row justify-content-center">
-          <div class="col-lg-12">
-            <div class="row justify-content-center">
-
-              <div class="col-lg-12 wow fadeIn" data-wow-delay="100ms">
-                <h2 class="mb-3 text-center"
-                  style="font-size: 30px; font-weight:bold; text-align: center; padding-top: 7px;">
-                  Enhancements Overview</h2>
-                <div class="banner-eicw">
-                  <a href="img/ccl6-overview-light.png" id="evo3" class="portfolio-img">
-                    <img src="img/ccl6-overview-light.png" id="evo3-img" class="img-fluid" alt="evo3">
-                  </a>
-                </div>
               </div>
             </div>
           </div>
