--- a/worksbynrfz/delays-checker.html
+++ b/worksbynrfz/delays-checker.html
@@ -36,6 +36,13 @@
   </script>
 </head>
 
+<style>
+  #cv-tdc {
+    background-image: url('https://i.imgur.com/dRoqS9F.png');
+    height: 75vh;
+  }
+</style>
+
 <body>
 
 
@@ -155,14 +162,13 @@
   <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
   <!-- Cover Header -->
-  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-tdc"
-    style="background-image: url(https://i.imgur.com/dRoqS9F.png); height: 75vh;"></section>
-  <div class="container h-100">
-    <div class="row h-100 align-items-center">
-      <div class="col-12">
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-tdc">
+    <div class="container h-100">
+      <div class="row h-100 align-items-center">
+        <div class="col-12">
+        </div>
       </div>
     </div>
-  </div>
   </section>
 
   <!-- Title/Breadcrumbs -->
@@ -280,7 +286,7 @@
             <div class="row justify-content-center">
               <div class="col-lg-12">
                 <div class="info justify-content-center">
-                  <p style="text-align: center; padding-bottom: 2em;">A pet-project of mine. Created just to keep
+                  <p style="text-align: left; padding-bottom: 2em;">A pet-project of mine. Created just to keep
                     track of
                     train delays and breakdowns. The current features only included an Overview of Days Since Last
                     Reported
@@ -292,23 +298,23 @@
             </div>
           </div>
 
+
           <div class="wrapper">
-            <div class="wrapper">
-              <i id="left" class="fa-solid fa-angle-left" style="display: none;"></i>
-              <div class="carousel">
-                <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel">
-                  <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="img" draggable="false">
-                </a>
-                <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel">
-                  <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="img" draggable="false">
-                </a>
-                <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
-                  <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
-                </a>
-              </div>
-              <i id="right" class="fa-solid fa-angle-right" style="display: none;"></i>
+            <i id="left" class="fa-solid fa-angle-left" style="display: none;"></i>
+            <div class="carousel">
+              <a href="https://i.imgur.com/XPq0mvF.png" class="portfolio-img" data-gallery="carousel">
+                <img class="img-fluid" src="https://i.imgur.com/XPq0mvF.png" alt="img" draggable="false">
+              </a>
+              <a href="https://i.imgur.com/JqT4T3I.png" class="portfolio-img" data-gallery="carousel">
+                <img class="img-fluid" src="https://i.imgur.com/JqT4T3I.png" alt="img" draggable="false">
+              </a>
+              <a href="https://i.imgur.com/xKLVJbC.png" class="portfolio-img" data-gallery="carousel">
+                <img class="img-fluid" src="https://i.imgur.com/xKLVJbC.png" alt="img" draggable="false">
+              </a>
             </div>
+            <i id="right" class="fa-solid fa-angle-right" style="display: none;"></i>
           </div>
+
         </div>
       </div>
     </div>
