--- a/worksbynrfz/improve-wf.html
+++ b/worksbynrfz/improve-wf.html
@@ -36,6 +36,13 @@
   </script>
 </head>
 
+<style>
+  #cv-eicw {
+    background-image: url("../eicw/img/cover-light.png");
+    height: 75vh;
+  }
+</style>
+
 <body>
 
 
@@ -155,8 +162,7 @@
   <!------------------------------------------------------------------------ Start of Sections ------------------------------------------------------------------------>
 
   <!-- Cover Header -->
-  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-eicw"
-    style="background-image: url(../eicw/img/cover-light.png); height: 75vh;">
+  <section class="breadcrumb-area-eicw-cover bg-img bg-overlay" id="cv-eicw">
     <div class="container h-100">
       <div class="row h-100 align-items-center">
         <div class="col-12">
@@ -354,8 +360,6 @@
 
   <script src="../js/swiper-bundle.min.js"></script>
 
-  <script src="../js/portfolio-img.min.js"></script>
-
   <script src="../js/isotope.pkgd.min.js"></script>
 
   <script src="../js/portfolio-comp.js"></script>
@@ -363,8 +367,6 @@
   <script src="../js/copy-to-clipboard.js"></script>
 
   <script src='//cdnjs.cloudflare.com/ajax/libs/flickity/1.0.0/flickity.pkgd.js'></script>
-
-  <script src="../js/portfolio-img.min.js"></script>
 
   <script src="../js/dis.js"></script>
 
