--- a/eicw/eicw.html
+++ b/eicw/eicw.html
@@ -243,7 +243,7 @@
     <!-- Section Contents -->
     <section class="about-me-sum clearfix">
         <div class="wbnrfz_eicw">
-            <div class="container container-mobile">
+            <div class="container container-mobile" style="padding-bottom: 2em;">
                 <div class="row justify-content-center">
                     <div class="col-lg-12">
                         <div class="row justify-content-center">
