--- a/bat/abs.html
+++ b/bat/abs.html
@@ -320,7 +320,7 @@
             // Function to fetch bus stops
             async function fetchBusStops(skip) {
                 try {
-                    const response = await fetch(`${apiUrl}?$skip=${skip}&$top=${limit}`, {
+                    const response = await fetch(`${apiUrl}?$skip=${skip}`, {
                         method: 'GET',
                         headers: {
                             accept: 'application/json',
